# AIMWORKS

./: .gitignore  README.md
ontology_release/: .gitignore  .zenodo.json  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
ontology_release/config/: llm_agent.example.yaml  mapping_rules.yaml  metadata_defaults.yaml  namespace_policy.yaml  ontology_profiles.yaml  release_profile.yaml  source_ontologies.yaml
ontology_release/config/curated_units/: README.md  pemfc_curated_units.csv
ontology_release/context_hub/: CONTENT_INVENTORY.md  INSTALL_AND_USE.md  README.md
ontology_release/context_hub/config/: cli_workflow_notes.md  context_hub_adoption_plan.md  local_source_notes.md
ontology_release/input/: current_ontology.jsonld
ontology_release/odk/: .gitignore  h2kg.ttl
ontology_release/ontology/: controlled_vocabulary.ttl  examples.ttl  imports.ttl  inferred.ttl  schema.jsonld  schema.ttl
ontology_release/output/docs/: hydrogen-ontology.html  index.html  search-index.json
ontology_release/output/examples/: examples.ttl
ontology_release/output/mappings/: alignments.ttl
ontology_release/output/odk/: manifest.json
ontology_release/output/ontology/: controlled_vocabulary.ttl  core_schema.jsonld  core_schema.ttl  pemfc_schema.jsonld  pemfc_schema.ttl  pemwe_schema.jsonld  pemwe_schema.ttl  schema.foops.rdf  schema.jsonld  schema.ttl
ontology_release/output/publication/: hydrogen-ontology.html  index.html  (+1 more)
ontology_release/repo_root_integration/: pages_readme.md
ontology_release/shapes/: annotation_shapes.ttl  metadata_shapes.ttl  release_shapes.ttl
ontology_release/tests/: conftest.py  test_battinfo_overlap.py  test_classify.py  test_docs.py  test_engineering.py  test_enrich.py  test_extract.py  test_fair.py  test_index.py  test_inspect.py  test_io.py  test_mapper.py  test_mapper_chebi.py  test_normalize.py  test_normalize_source.py  test_odk.py  test_prefix_repair.py  test_profile_modules.py  test_profiles.py  test_quality.py  test_release.py  test_split.py  test_unit_enrichment.py  test_validate.py  test_visual_explorer_assets.py
(+886 files in other folders)
