[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aimworks-ontology-release"
version = "0.1.0"
description = "Release-preparation pipeline for the H2KG PEMFC Catalyst Layer Application Ontology."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AIMWORKS Maintainers" }]
dependencies = [
  "rdflib>=7.0.0",
  "PyYAML>=6.0.1",
  "requests>=2.31.0",
  "pandas>=2.1.0",
  "rapidfuzz>=3.5.2",
  "pyshacl>=0.25.0",
  "jinja2>=3.1.3",
  "pytest>=8.0.0"
]

[project.optional-dependencies]
llm = ["requests>=2.31.0"]
ontology = ["owlready2>=0.46"]
dev = ["pytest-cov>=4.1.0"]

[project.scripts]
aimworks-ontology-release = "aimworks_ontology_release.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"
